# jade

./: .clang-format  .gitignore  CMakeLists.txt
examples/: 000-hello-world.cpp  001-triangle.cpp  hello-world.cpp  triangle.cpp
examples/001-triangle/: shader.frag.hlsl  shader.vert.hlsl
jade/args/: args-processor.cpp  args-processor.hpp
jade/engine/: application-context.cpp  application-context.hpp
jade/render/: index-buffer.cpp  index-buffer.hpp  render-context.cpp  render-context.hpp  shader-manager.cpp  shader-manager.hpp  uniform-buffer.cpp  uniform-buffer.hpp  vertex-buffer.cpp  vertex-buffer.hpp
jade/render/d3d11/: index-buffer-d3d11.cpp  index-buffer-d3d11.hpp  render-context-d3d11.cpp  render-context-d3d11.hpp  shader-manager-d3d11.cpp  shader-manager-d3d11.hpp  uniform-buffer-d3d11.cpp  uniform-buffer-d3d11.hpp  vertex-buffer-d3d11.cpp  vertex-buffer-d3d11.hpp
jade/render/open-gl/: index-buffer-open-gl.cpp  index-buffer-open-gl.hpp  render-context-open-gl.cpp  render-context-open-gl.hpp  shader-manager-open-gl.cpp  shader-manager-open-gl.hpp  uniform-buffer-open-gl.cpp  uniform-buffer-open-gl.hpp  vertex-buffer-open-gl.cpp  vertex-buffer-open-gl.hpp
jade/strings/: string-manager.cpp  string-manager.hpp
jade/threads/: task-queue.cpp  task-queue.hpp
jade/utils/: scope-exit.hpp
test/: task-queue.cpp
test/helpers/: macros.hpp
tests/: task-queue.cpp
